--- a/jokenpo meu completo/jokenpo.css
+++ b/jokenpo meu completo/jokenpo.css
@@ -57,8 +57,31 @@ button{
 .tesoura:active{
     background-color: rgba(47, 134, 36, 0.123);
 }
-
-
+.jogadaDiv{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+    text-align: center;
+    width: fit-content;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: sans-serif;
+}
+.suaJogadaMao, .pcJogadaMao{
+    font-size: 30px;
+}
+.suaJogadaDiv, .pcJogadaDiv{
+    width: 240px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid;
+    border-radius: 20px;
+    border-color: rgba(156, 156, 156, 0.171);
+    box-shadow: 0 0 6px grey;
+}
 .scoreDiv{
     display: flex;
     justify-content: center;
@@ -71,4 +94,15 @@ button{
     padding: 10px 30px;
     font-family: sans-serif;
     font-size: 15px;
+}
+.vs{
+    font-weight: bold;
+    margin-top: 50px;
+}
+.resultado{
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    font-weight: bold;
 }
