--- a/lista de afazeres completo/listaDeAfazeres.css
+++ b/lista de afazeres completo/listaDeAfazeres.css
@@ -65,6 +65,9 @@ button:active{
 #inputTarefa::placeholder{
     color: rgb(247, 239, 255);
 }
+#inputTarefa:focus{
+    outline: none;
+}
 #lista{
     margin-top: 30px;
 }
